# aac-go-fish

./: .dockerignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  HOSTING.md  README.md  api.html  compose-example.yaml  compose.dev.yaml  compose.yaml  config.alloy  editor.worker.js  index.html  json.worker.js  markdown-page.html  nginx.conf  nginx.dev.conf  openapi.yaml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: contribute.yml  deploy.yml  docker-publish.yml  lint-test.yaml  spelling.yml  wss-schema.yaml
assets/css/: styles.14ae053b.css  styles.2f89b08d.css
assets/js/: 00563787.04989598.js  (+595 more)
backend/: .dockerignore  Dockerfile  channel.py  constants.py  dependencies.py  game.py  game_state.py  hello.py  logging_config.py  models.py
docs/: intro.html
documentation/: docusaurus.config.js  package.json
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_9b5d3c41184f4a9e___init___py.html  z_9b5d3c41184f4a9e_test_example_py.html  z_9b5d3c41184f4a9e_test_game_py.html  z_9b5d3c41184f4a9e_test_game_state_py.html  z_9b5d3c41184f4a9e_test_lobbymanager_py.html  z_9b5d3c41184f4a9e_test_models_py.html  z_9b5d3c41184f4a9e_test_ws_py.html  z_e17dcb4e28158375___init___py.html  z_e17dcb4e28158375_constants_py.html  z_e17dcb4e28158375_dependencies_py.html  z_e17dcb4e28158375_game_py.html  z_e17dcb4e28158375_game_state_py.html  z_e17dcb4e28158375_hello_py.html  z_e17dcb4e28158375_logging_config_py.html  z_e17dcb4e28158375_models_py.html
htmlcov-frontend/: index.html
prometheus/: Dockerfile  prometheus.yaml
redocusaurus/: using-single-yaml.yaml
schemas/: wss_schema.json
tutorial/: intro.html
(+249 files in other folders)
